--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -2,9 +2,9 @@
 {% block env %}{% endblock env %}
 
 {% block start %}
-def hitting_powers(a: int, b: int, tol: int=100) -> list[int]:
+def hitting_powers(a: int, b: int, tol: int=100) -> tuple[int, int]:
     # your code here
-    return []
+    return ()
 {% endblock start %}
 
 {% block example %}
@@ -15,7 +15,7 @@ print(hitting_powers(9, 10, 5))
 # These "asserts" are used for self-checking
 {% block tests %}
 {% for t in tests %}
-assert {% block call %}hitting_powers({{t.input|p_args}})
+assert {% block call %}to_list(hitting_powers({{t.input|p_args}}))
 {% endblock %} == {% block result %}{{t.answer|p}}{% endblock %}{% endfor %}
 {% endblock %}
 
