--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -15,7 +15,7 @@ print(hitting_powers(9, 10, 5))
 # These "asserts" are used for self-checking
 {% block tests %}
 {% for t in tests %}
-assert {% block call %}to_list(hitting_powers({{t.input|p_args}}))
+assert {% block call %}list(hitting_powers({{t.input|p_args}}))
 {% endblock %} == {% block result %}{{t.answer|p}}{% endblock %}{% endfor %}
 {% endblock %}
 
