--- a/editor/initial_code/python_3.tmpl
+++ b/editor/initial_code/python_3.tmpl
@@ -2,7 +2,7 @@
 {% block env %}{% endblock env %}
 
 {% block start %}
-def hitting_powers(a: int, b: int, tol: int=100) -> tuple[int, int]:
+def hitting_powers(a: int, b: int, tol: int=100) -> tuple[int, int]|list[int]:
     # your code here
     return ()
 {% endblock start %}
